# hafox

./: .envrc  .gitignore  Cargo.toml  README.md  check.sh  flake.nix  format.sh  pyproject.toml  smartfox.py
.github/workflows/: ci.yml
src/: main.rs  model.rs  mqtt.rs  smartfox.rs
src/hafox/: __init__.py  __main__.py  mqtt.py
