[package]
name = "hafox"
description = "SmartFox energy monitor CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
quick-xml = { version = "0.38.0", features = ["serialize"] }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
