[package]
name = "hafox"
description = "SmartFox energy monitor CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.40", features = ["derive", "env"] }
display_full_error = "1.1.0"
humantime = "2.3.0"
jiff = { version = "0.2.29", default-features = false, features = ["serde", "std"] }
quick-xml = { version = "0.38.0", features = ["serialize"] }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
rumqttc = { version = "0.25.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.4"
